# cidrscan-rs

./: .gitignore  .rooignore  Cargo.toml  Makefile.toml  README.md  build.rs  cargo.toml  cbindgen.toml  cidrscan.h  cidrscan_php.phpstub
.cargo/: config.toml
.github/scripts/: build.sh
.github/workflows/: release.yml
binding_skeletons/php/: README.md  composer.json  generate.php
cidrscan_core/: .gitignore  Cargo.toml  build.rs
cidrscan_core/.cargo/: config.toml
cidrscan_core/include/: cidrscan.h
cidrscan_core/src/: errors.rs  handle_registry.rs  helpers.rs  lib.rs  public_api.rs  shmem_rwlock.rs  types.rs
cidrscan_core/src/platform/: unix.rs  windows.rs
cidrscan_core/tests/: integration_tests.rs  loom_model.rs  patricia_tree_tests.rs  shmem_rwlock_tests.rs
cidrscan_php/: Cargo.toml  build.rs
cidrscan_php/src/: lib.rs
demos/php/ffi/: CidrscanFFI.php  cidrscan.php  index.php
docs/: macos-robust-mutex.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: trie_ops.rs
sanitizers/: asan.supp  msan.supp  tsan.supp
src/: constants.rs  cross_proc_rwlock.rs  errors.rs  lib.rs  public_api.rs  shmem_rwlock.rs  telemetry.rs  types.rs
src/platform/: mod.rs  windows.rs
tests/: cross_proc.rs  integration_tests.rs  patricia_tree_tests.proptest-regressions  patricia_tree_tests.rs  shmem_rwlock_tests.rs
