[package]
name = "cidrscan"
version = "0.1.0"
authors = ["TheRealMkadmi <wahibmkadmi16@gmail.com>"]
edition = "2021"
description = "A high-performance memory-resident Patricia tree with TTL support for CIDR tagging and IP lookups."
license = "MIT"
repository = "https://github.com/TheRealMkadmi/cidrscan-rs"

[dependencies]
raw_sync = "0.1.5"
shared_memory = "0.12"
once_cell   = "1.21"     # per-process handle cache
dashmap = "6.1.0"
crossbeam-epoch = "0.9.18"
crossbeam-queue = "0.3.12"

[dev-dependencies]
proptest = "1"
num_cpus = "1"
rand = "0.9.1"

[features]
trace = []

[target.x86_64-pc-windows-msvc]
linker = "clang-cl"                        # or full path to clang-cl.exe
rustflags = ["-Z sanitizer=address"]       # nightly-only
