[package]
name = "cidrscan"
version = "0.1.0"
authors = ["TheRealMkadmi <wahibmkadmi16@gmail.com>"]
edition = "2021"
description = "A cross-process, memory-resident, lock-free-read LPM engine with per-prefix TTLs and a tiny, language-agnostic C ABI."
license = "MIT"
repository = "https://github.com/TheRealMkadmi/cidrscan-rs"

[lib]
name = "cidrscan"
# Build both dynamic and static libraries for C compatibility
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
log = "0.4"
env_logger = { version = "0.11", default-features = false }
raw_sync = "0.1.5"
shared_memory = "0.12"
once_cell   = "1.21"     # per-process handle cache
dashmap = "6.1.0"
crossbeam-epoch = "0.9.18"
crossbeam-queue = "0.3.12"
metrics = "0.22"

[target.'cfg(windows)'.dependencies]
windows-sys = "0.59.0"

[target.'cfg(unix)'.dependencies]
libc = "0.2.151"

[dev-dependencies]
proptest = "1"
num_cpus = "1"
rand = "0.9.1"
cargo-make = "0.37"

[features]
trace = []
enable_global_priv = []
