[package]
name = "cidrscan_core-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
arbitrary = { version = "1", features = ["derive"] }
libfuzzer-sys = "0.4"

[dependencies.cidrscan_core]
path = "../cidrscan_core"

[[bin]]
name = "trie_ops"
path = "fuzz_targets/trie_ops.rs"
test = false
doc = false
bench = false

[workspace]
members = ["."]
